WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138316
RenderCounter shouldn't need a pre-destructor hook.
https://bugs.webkit.org/show_bug.cgi?id=138316
Summary
RenderCounter shouldn't need a pre-destructor hook.
Andreas Kling
Reported
2014-11-03 10:37:46 PST
RenderCounter has a willBeDestroyed() hook, but it doesn't actually need it. It was done that way originally because there were no guarantees about calling RenderObject::view() in a renderer destructor. These days that's not a problem. Even if you are the RenderView. For real.
Attachments
Patch
(2.22 KB, patch)
2014-11-03 10:54 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-11-03 10:54:57 PST
Created
attachment 240863
[details]
Patch
WebKit Commit Bot
Comment 2
2014-11-03 12:17:39 PST
Comment on
attachment 240863
[details]
Patch Clearing flags on attachment: 240863 Committed
r175485
: <
http://trac.webkit.org/changeset/175485
>
WebKit Commit Bot
Comment 3
2014-11-03 12:17:43 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug