RenderCounter shouldn't need a pre-destructor hook. <https://webkit.org/b/138316>

Reviewed by Antti Koivisto.

RenderCounter will automatically register/unregister itself with
the RenderView when constructed/destroyed.

It was using a willBeDestroyed() hook because it used to be that you
couldn't get to the RenderView in the destructor. That's no longer
an issue as Document promises that RenderView is the last render tree
node to go away.

* rendering/RenderCounter.cpp:
(WebCore::RenderCounter::~RenderCounter):
(WebCore::RenderCounter::willBeDestroyed): Deleted.
* rendering/RenderCounter.h:


Canonical link: https://commits.webkit.org/156156@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175485 268f45cc-cd09-0410-ab3c-d52691b4dbfc